--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,5 +7,24 @@ pipeline {
                 echo 'Hello World'
             }
         }
+        stage('build') {
+            steps {
+                echo 'build job'
+            }
+        }
+        
+        stage('test') {
+            steps {
+                echo 'testing job'
+            }
+        }
+       stage('deploy') {
+            steps {
+                echo 'deploy job'
+            }
+        } 
     }
 }
+
+    
+
