--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         }
        stage('deploy') {
             steps {
-                echo 'deploy job'
+                echo 'deploy job for downloading application'
             }
         } 
     }
